# argparse

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: argparse.h  argument.h
src/: CMakeLists.txt  argparse.cpp  argument.cpp  parser.cpp
tests/: CMakeLists.txt  test_argparse.cpp  test_argument.cpp
